1.3.13 (unreleased)
-------------------

- add support for custom SVN url [amleczko]


1.3.12 (2013-02-12)
-------------------

- add last QA date [amleczko]
- add google upload for QA reports [amleczko]


1.3.11 (2013-02-11)
-------------------

 - add quality export scripts [amleczko]

1.3.10 (2013-02-04)
-------------------

 - refactor non-invoiced tickets validation [amleczko]

1.3.9 (2013-01-30)
------------------

- move to github [amleczko]
- user can select only tickets within those that have an open invoice [massimoazzolini]
- update models for karma integration [amleczko]
- fixes for the subversion integration [amleczko]