@@ -2,6 +2,7 @@
 -------------------
 
 - add support for custom SVN url [amleczko]
+- fix quality reports [amleczko]
 
 
 1.3.12 (2013-02-12)
